--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,9 @@
         android:layout_height="wrap_content">
         <com.cengalabs.flatui.views.FlatButton
             android:id="@+id/btn_action"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
+            style="@style/MainTextView"
             android:text="ฝึกท่าทาง"
-            android:textSize="25dp"
-            android:singleLine="true"
             android:drawableTop="@drawable/ic_accessibility_grey600_36dp"
-            android:drawablePadding="5dp"
             flatui:fl_theme="@array/orange"
             flatui:fl_textAppearance="fl_light"
             flatui:fl_blockButtonEffectHeight="3dp"
@@ -36,17 +28,9 @@
 
         <com.cengalabs.flatui.views.FlatButton
             android:id="@+id/btn_game"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+            style="@style/MainTextView"
             android:text="เกม"
-            android:textSize="25dp"
-            android:gravity="center"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
-            android:singleLine="true"
             android:drawableTop="@drawable/ic_games_grey600_36dp"
-            android:drawablePadding="5dp"
             flatui:fl_theme="@array/blossom"
             flatui:fl_textAppearance="fl_light"
             flatui:fl_blockButtonEffectHeight="3dp"
@@ -63,17 +47,9 @@
         android:layout_height="wrap_content">
         <com.cengalabs.flatui.views.FlatButton
             android:id="@+id/btn_speak"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+            style="@style/MainTextView"
             android:text="ฝึกพูด"
-            android:textSize="25dp"
-            android:singleLine="true"
-            android:gravity="center"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
             android:drawableTop="@drawable/ic_tag_faces_grey600_36dp"
-            android:drawablePadding="5dp"
             flatui:fl_textAppearance="fl_light"
             flatui:fl_blockButtonEffectHeight="3dp"
             flatui:fl_theme="@array/sky"
@@ -83,17 +59,9 @@
 
         <com.cengalabs.flatui.views.FlatButton
             android:id="@+id/btn_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
+            style="@style/MainTextView"
             android:text="ข้อมูล"
-            android:textSize="25dp"
-            android:singleLine="true"
             android:drawableTop="@drawable/ic_info_outline_grey600_36dp"
-            android:drawablePadding="5dp"
             flatui:fl_theme="@array/sand"
             flatui:fl_textAppearance="fl_light"
             flatui:fl_blockButtonEffectHeight="3dp"
