--- a/app/src/main/res/layout/activity_action_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_detail.xml
@@ -69,7 +69,7 @@ android:orientation="vertical">
 
 
             </FrameLayout>
-            <!--<info.hoang8f.android.segmented.SegmentedGroup
+           <!-- <info.hoang8f.android.segmented.SegmentedGroup
                 android:id="@+id/segmented2"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
@@ -84,6 +84,9 @@ android:orientation="vertical">
                     android:drawablePadding="5dp"
                     android:text="ไทย"
                     android:checked="true"
+                    flatui:fl_fontFamily="ThaiSansNeue"
+                    flatui:fl_fontWeight="light"
+                    flatui:fl_fontExtension="ttf"
                     style="@style/RadioButton" />
 
                 <RadioButton
@@ -93,6 +96,9 @@ android:orientation="vertical">
                     android:drawableLeft="@drawable/united_kingdom"
                     android:drawablePadding="5dp"
                     android:text="อังกฤษ"
+                    flatui:fl_fontFamily="ThaiSansNeue"
+                    flatui:fl_fontWeight="light"
+                    flatui:fl_fontExtension="ttf"
                     style="@style/RadioButton" />
             </info.hoang8f.android.segmented.SegmentedGroup>-->
             <com.cengalabs.flatui.views.FlatTextView
