--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -1,4 +1,4 @@
-<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
+<ScrollView
     android:id="@+id/scroll"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
@@ -177,4 +177,4 @@
     </LinearLayout>
 
 
-</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
+</ScrollView>
