--- a/app/src/main/res/layout/activity_book_info_column.xml
+++ b/app/src/main/res/layout/activity_book_info_column.xml
@@ -3,6 +3,7 @@
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#ffffff"
     android:padding="5dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp">
@@ -10,24 +11,11 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="fill_parent">
-        <com.cengalabs.flatui.views.FlatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:gravity="center"
-            android:text="No."
-            android:layout_gravity="center"
-            android:textSize="30dp"
-            android:id="@+id/position"
-            flatui:fl_fontFamily="ThaiSansNeue"
-            flatui:fl_fontWeight="light"
-            flatui:fl_fontExtension="ttf"
-            flatui:fl_theme="@array/dark"
-            flatui:fl_textColor="fl_darker"/>
+
     <ImageView
         android:id="@+id/img"
-        android:layout_width="100dp"
-        android:layout_height="150dp"/>
+        android:layout_width="75dp"
+        android:layout_height="100dp"/>
 
     <com.cengalabs.flatui.views.FlatTextView
         android:layout_width="wrap_content"
@@ -36,7 +24,7 @@
         android:gravity="left"
         android:layout_gravity="center"
         android:text="Vocabulary"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:id="@+id/bookName"
         flatui:fl_fontFamily="ThaiSansNeue"
         flatui:fl_fontWeight="light"
