--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Base application theme. -->
         <!-- Customize your theme here. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -86,5 +85,17 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="MainTextView" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:paddingTop">40dp</item>
+        <item name="android:paddingBottom">40dp</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:drawablePadding">5dp</item>
+
+    </style>
 
 </resources>
