--- a/app/src/main/res/layout/activity_speak_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_speak_vocabulary_detail.xml
@@ -1,4 +1,4 @@
-<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
+<ScrollView
     android:id="@+id/scroll"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
@@ -69,6 +69,39 @@
 
 
                     </FrameLayout>
+                    <info.hoang8f.android.segmented.SegmentedGroup
+                        android:id="@+id/segmented2"
+                        android:layout_gravity="right"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/button21"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableLeft="@drawable/thailand"
+                            android:drawablePadding="5dp"
+                            android:text="ไทย"
+                            android:checked="true"
+                            flatui:fl_fontFamily="ThaiSansNeue"
+                            flatui:fl_fontWeight="light"
+                            flatui:fl_fontExtension="ttf"
+                            style="@style/RadioButton" />
+
+                        <RadioButton
+                            android:id="@+id/button22"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableLeft="@drawable/united_kingdom"
+                            android:drawablePadding="5dp"
+                            android:text="อังกฤษ"
+                            flatui:fl_fontFamily="ThaiSansNeue"
+                            flatui:fl_fontWeight="light"
+                            flatui:fl_fontExtension="ttf"
+                            style="@style/RadioButton" />
+
+                    </info.hoang8f.android.segmented.SegmentedGroup>
                     <com.cengalabs.flatui.views.FlatTextView
                         android:id="@+id/voc_name"
                         android:layout_width="match_parent"
@@ -170,4 +203,4 @@
 
 
     </LinearLayout>
-</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
+</ScrollView>
