--- a/app/src/main/res/layout/activity_words_game.xml
+++ b/app/src/main/res/layout/activity_words_game.xml
@@ -4,7 +4,9 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#e898bf"
+    >
 
 
         <LinearLayout
@@ -16,19 +18,21 @@
                 android:id="@+id/topscore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
+                android:textColor="#ffffff"
                 android:padding="20dp"
-                android:text="คะแนนสุงสุด"
-                android:textSize="25dp"
+                android:text=""
+                android:textSize="40dp"
                 android:layout_margin="5dip"
+                android:drawableLeft="@drawable/ic_poll_white_36dp"
+                android:drawablePadding="5dp"
                 flatui:fl_size="30dip"
                 android:orientation="vertical"
-                flatui:fl_fontFamily="ThaiSansNeue"
-                flatui:fl_fontWeight="light"
-                flatui:fl_fontExtension="ttf"/>
+                flatui:fl_fontFamily="Waffle"
+                flatui:fl_fontWeight="regular"
+                flatui:fl_fontExtension="otf"/>
         <VideoView
-            android:layout_width="230dp"
-            android:layout_height="280dp"
+            android:layout_width="200dp"
+            android:layout_height="240dp"
             android:id="@+id/videoView"
             android:layout_margin="5dp"
             android:layout_gravity="center" />
@@ -37,6 +41,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/text"
             android:id="@+id/myRadioGroup"
             android:checkedButton="@+id/sound" >
@@ -47,17 +52,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:background="#0000"
-                android:text="ตัวเลือก 1"
-                android:textColor="#000000"
-                android:textSize="30dp"
+                android:text=""
+                android:textColor="#ffffff"
+                android:textSize="35dp"
                 android:gravity="left"
                 android:layout_margin="5dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                flatui:fl_size="30dp"
+                flatui:fl_theme="@array/snow"
                 android:orientation="vertical"
-                flatui:fl_fontFamily="ThaiSansNeue"
-                flatui:fl_fontWeight="light"
-                flatui:fl_fontExtension="ttf"
+                flatui:fl_fontFamily="Waffle"
+                flatui:fl_fontWeight="regular"
+                flatui:fl_fontExtension="otf"
                 flatui:fl_dotMargin="1dp"/>
 
             <com.cengalabs.flatui.views.FlatRadioButton
@@ -66,17 +71,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:background="#0000"
-                android:text="ตัวเลือก 2"
-                android:textColor="#000000"
-                android:textSize="30dp"
+                android:text=""
+                android:textColor="#ffffff"
                 android:gravity="left"
                 android:layout_margin="5dip"
-                flatui:fl_size="30dip"
-                flatui:fl_theme="@array/dark"
+                android:textSize="35dp"
+                flatui:fl_size="30dp"
+                flatui:fl_theme="@array/snow"
                 android:orientation="vertical"
-                flatui:fl_fontFamily="ThaiSansNeue"
-                flatui:fl_fontWeight="light"
-                flatui:fl_fontExtension="ttf"
+                flatui:fl_fontFamily="Waffle"
+                flatui:fl_fontWeight="regular"
+                flatui:fl_fontExtension="otf"
                 flatui:fl_dotMargin="1dp"/>
         </RadioGroup>
 
