Game and remove tutorial first come

--- a/app/src/main/res/layout/activity_action_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_action_vocabulary_detail.xml
@@ -83,6 +83,7 @@ android:orientation="vertical">
                     android:drawableLeft="@drawable/thailand"
                     android:drawablePadding="5dp"
                     android:text="ไทย"
+                    android:textSize="24dp"
                     android:checked="true"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
@@ -95,6 +96,7 @@ android:orientation="vertical">
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/united_kingdom"
                     android:drawablePadding="5dp"
+                    android:textSize="24dp"
                     android:text="อังกฤษ"
                     flatui:fl_fontFamily="ThaiSansNeue"
                     flatui:fl_fontWeight="light"
