--- a/app/src/main/res/layout/activity_speak_vocabulary_detail.xml
+++ b/app/src/main/res/layout/activity_speak_vocabulary_detail.xml
@@ -70,19 +70,20 @@
 
                     </FrameLayout>
                     <info.hoang8f.android.segmented.SegmentedGroup
-                        android:id="@+id/segmented2"
+                        android:id="@+id/segmented"
                         android:layout_gravity="right"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <RadioButton
-                            android:id="@+id/button21"
+                            android:id="@+id/btnTH"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/thailand"
                             android:drawablePadding="5dp"
                             android:text="ไทย"
+                            android:textSize="24dp"
                             android:checked="true"
                             flatui:fl_fontFamily="ThaiSansNeue"
                             flatui:fl_fontWeight="light"
@@ -90,12 +91,13 @@
                             style="@style/RadioButton" />
 
                         <RadioButton
-                            android:id="@+id/button22"
+                            android:id="@+id/btnEN"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/united_kingdom"
                             android:drawablePadding="5dp"
                             android:text="อังกฤษ"
+                            android:textSize="24dp"
                             flatui:fl_fontFamily="ThaiSansNeue"
                             flatui:fl_fontWeight="light"
                             flatui:fl_fontExtension="ttf"
