--- a/app/src/main/res/layout/activity_words_game.xml
+++ b/app/src/main/res/layout/activity_words_game.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e898bf"
+    android:background="#e57373"
     >
 
 
@@ -36,7 +36,6 @@
             android:id="@+id/videoView"
             android:layout_margin="5dp"
             android:layout_gravity="center" />
-
         <RadioGroup
             android:layout_gravity="center"
             android:layout_width="wrap_content"
